Bug 337955 - Menu bar disappears if another konsole is started --hide-menubar
Summary: Menu bar disappears if another konsole is started --hide-menubar
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-01 12:17 UTC by Luke Elliott
Modified: 2014-08-29 02:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke Elliott 2014-08-01 12:17:00 UTC
This has been happening for me for a while (probably since 4.9) but I've only finally figured out how to reproduce it reliably.

1. Have a konsole open with > 1 tab.
2. With krunner: konsole --hide-menubar
3. In the konsole from (1), click another tab. The menu bar disappears!

For whatever reason, if konsole --hide-menubar is run from within a konsole at stage (2), the problem doesn't occur.

Two "ctrl-shift-m"s will bring back the menu bar, suggesting the internal state thinks its still displayed, I suppose.

Hope that makes sense!

Regards

Luke Elliott.
Comment 1 Chao Feng 2014-08-03 13:53:43 UTC
Confirm in konsole frameworks branch. Since this issue is only duplicated when konsole is started in krunner. It should be krunner bug.
Comment 2 Luke Elliott 2014-08-03 15:22:02 UTC
If it helps, I didn't trip over this using krunner - originally it was happening using the CodeLite IDE to launch a bash script which itself runs "konsole --hide-menubar".

CodeLite appears to be using wxWidget's wxExecute().

Regards

Luke.
Comment 3 Arjun AK 2014-08-20 18:04:40 UTC
Patch to fix this: https://git.reviewboard.kde.org/r/119865/
Comment 4 Kurt Hindenburg 2014-08-29 02:34:27 UTC
Git commit 08eb4c07c7ec6b443f20793d21ac6c0cacdf876e by Kurt Hindenburg.
Committed on 29/08/2014 at 02:30.
Pushed by hindenburg into branch 'KDE/4.14'.

Fix visibility of menubar when other konsoles are started --hide-menubar

When a konsole with more than 1 tab open, start another via runner
using --hide-menubar; the first konsole's menubar will go hidden.

Thanks Arjun Ak for patch.

FIXED-IN: 4.14.1
REVIEW: 119865

M  +3    -0    src/MainWindow.cpp

http://commits.kde.org/konsole/08eb4c07c7ec6b443f20793d21ac6c0cacdf876e