Fix visibility of menubar when other konsoles are started --hide-menubar

When a konsole with more than 1 tab open, start another via runner
using --hide-menubar; the first konsole's menubar will go hidden.

Thanks Arjun Ak for patch.

FIXED-IN: 4.14.1
BUG: 337955
REVIEW: 119865